moving logic to downloader component
